# karapace

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile.tests  FIX_SUMMARY.md  GNUmakefile  MANIFEST.in  Makefile  NEWS  PLANNING.md  Protobuf_Schema_References_implementation.md  README.md  README.rst  TASK.md  buf.gen.yaml  buf.yaml  copyright.sh  data.json  docker-compose.yml  endpoint.json  karapace.auth.json  karapace.config.env  karapace.config.json  karapace.spec  karapace.unit  karapace_rest.config.json  mypy.ini  pyproject.toml  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_question.md  02_bug.md  03_feature.md
.github/workflows/: codeql-analysis.yml  container-smoke-test.yml  container.yml  lint.yml  protobuf.yml  schema.yml  tests.yml
benchmarks/: README.md  benchmark_consume.py  benchmark_consume_avro.py  benchmark_listtopics.py  benchmark_produce.py  benchmark_produce_avro.py  create_topics.sh  karapace5_benchmarks.csv  karapace_benchmarks_4_5.csv  results.txt  run_benchmarks.sh
container/: Dockerfile  Dockerfile.dev  Dockerfile.f31  Dockerfile.registry  Dockerfile.rest  build_image.sh  compose-auth.yml  compose-dev.yml  compose.yml  docker-compose.yml  healthcheck.py  karapace.env  karapace.registry.env  karapace.rest.env  prometheus-config.yaml  prometheus.yml  publish_image.sh  start-all.sh  start.sh
container/certs/: cert.pem  cert.txt  key.pem
container/keycloak/: compose.yml  realm-export.json
container/opentelemetry/: collector-config.yaml
container/prometheus/: prometheus.yml  rules.yml
dependencies/: .gitignore  Makefile
dependencies/python3-aiohttp_socks/: .gitignore  Makefile
dependencies/python3-aiokafka/: .gitignore  Makefile
dependencies/python3-aiosocksy/: .gitignore  Makefile
dependencies/python3-avro/: .gitignore  Makefile  python3-avro.spec
dependencies/python3-jsonschema/: Makefile
dependencies/python3-kafka/: .gitignore  Makefile
examples/: README.rst  msk_iam_token_provider.py
go/protopace/: Makefile  compatibility.go  compatibility_test.go  formatter.go  formatter_test.go  go.mod  go.sum  main.go
helm-charts/: Chart.yaml  values.yaml
helm-charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  (+2 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0294c05bc0c2ef15___init___py.html  z_0343a66b6f7ca256___init___py.html  z_0343a66b6f7ca256_sentry_client_api_py.html  z_0343a66b6f7ca256_sentry_client_py.html  z_04d4bedadca9ee58___init___py.html  z_04d4bedadca9ee58___main___py.html  z_04d4bedadca9ee58_authentication_py.html  z_04d4bedadca9ee58_consumer_manager_py.html  z_04d4bedadca9ee58_convert_to_int_py.html  z_04d4bedadca9ee58_error_codes_py.html  z_04d4bedadca9ee58_karapace_py.html  z_04d4bedadca9ee58_schema_cache_py.html  z_06a1571d8d7fe8c4_anonymize_avro_py.html  z_0a3c7189b5182e6d_prometheus_py.html  z_0a7c33082df94b5c___init___py.html  z_0a7c33082df94b5c_protopace_py.html  z_272338b542b5bb00_introspect_py.html  z_272338b542b5bb00_models_py.html  z_272338b542b5bb00_schema_py.html  z_31cb245adb0be87f___init___py.html  z_31cb245adb0be87f_sentry_client_api_py.html  z_31cb245adb0be87f_sentry_client_py.html  z_33cbda61bc72be50_auth_container_py.html  z_33cbda61bc72be50_auth_py.html  z_33cbda61bc72be50_client_py.html  z_33cbda61bc72be50_config_py.html  z_33cbda61bc72be50_constants_py.html  z_33cbda61bc72be50_container_py.html  z_33cbda61bc72be50_dataclasses_py.html  z_33cbda61bc72be50_dependency_py.html  z_33cbda61bc72be50_errors_py.html  z_33cbda61bc72be50_in_memory_database_py.html  z_33cbda61bc72be50_kafka_error_handler_py.html  z_33cbda61bc72be50_kafka_utils_py.html  z_33cbda61bc72be50_key_format_py.html  z_33cbda61bc72be50_logging_setup_py.html  (+297 more)
karapace/: auth.py  avro_compatibility.py  base_stats.py  client.py  compatibility.py  config.py  constants.py  dataclasses.py  dependency.py  errors.py  in_memory_database.py  kafka_admin.py  kafka_error_handler.py  kafka_rest_apis.py  kafka_utils.py  karapace.py  karapace_all.py  karapacemetrics.py  key_format.py  key_format_corrector.py  master_coordinator.py  messaging.py  metrics.py  offsets_watcher.py  prometheus.py  protobuf_compatibility.py  rapu.py  schema_backup.py  schema_models.py  schema_reader.py  schema_record_producer.py  schema_references.py  schema_registry.py  schema_registry_apis.py  schema_type.py  schema_versioning.py  serialization.py  statsd.py  typing.py  utils.py  (+1 more)
openapi/: package.json  redocly.yaml  registry.yaml  schema-registry.html  schema-registry.yaml
performance-test/: README.rst  collect-docker-stats.sh  rest-proxy-post-topic-test.py  rest-proxy-post-topic-test.sh  rest-proxy-produce-consume-test.py  run-locust-test.sh  schema-registry-schema-post.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-typing.in  requirements-typing.txt  requirements.in  requirements.txt
scripts/: integration.sh  kafka.env
tests/: base_testcase.py  conftest.py  test_admin_rest.py  test_avro_references.py  test_avro_schema.py  test_jsonschema.py  test_master_coordinator.py  test_rest.py  test_rest_consumer.py  test_schema.py  test_schema_backup.py  test_serialization.py  utils.py
website/: .gitignore  Makefile  README.rst  package-lock.json  package.json  requirements.txt  tailwind.config.js
(+682 files in other folders)
