[build-system]
requires = ["setuptools > 64", "setuptools-scm > 8.0.0", "setuptools-golang"]
build-backend = "setuptools.build_meta"

[project]
name = "karapace"
requires-python = ">=3.12,<3.14"
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = [
  "accept-types",
  "aiohttp",
  "aiokafka<0.13.0",
  "async_lru",
  "cachetools",
  "confluent-kafka",
  "cryptography",
  "fastapi[standard]",
  "isodate",
  "jsonschema",
  "lz4",
  "networkx",
  "protobuf==3.20.3",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
  "python-dateutil",
  "python-snappy",
  "rich",
  "tenacity",
  "typing-extensions",
  "ujson",
  "watchfiles",
  "xxhash",
  "zstandard",
  "prometheus-client",
  "yarl",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "opentelemetry-proto<1.28.0",
  "dependency-injector",

  # Patched dependencies
  #
  # Note: It is important to use commits to reference patched dependencies. This
  # has two advantages:
  # - Reproducible builds
  # - The contents of the file change, which invalidates the existing docker
  #   images and forces a new image generation.
  #
  "avro @ https://github.com/aiven/avro/archive/5a82d57f2a650fd87c819a30e433f1abb2c76ca2.tar.gz#subdirectory=lang/py",
]

classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Libraries",
]

[project.scripts]
karapace = "karapace.__main__:main"
karapace_rest_proxy = "karapace.kafka_rest_apis.__main__:main"
karapace_schema_backup = "karapace.backup.cli:main"
karapace_mkpasswd = "karapace.core.auth:main"

[project.urls]
Homepage = "https://karapace.io"
Repository = "https://github.com/Aiven-Open/karapace/"
Issues = "https://github.com/Aiven-Open/karapace/issues"

[project.optional-dependencies]
sentry-sdk = ["sentry-sdk>=1.6.0"]
systemd-logging = ["systemd-python"]
ujson = ["ujson"]
dev = [
  # Developer QoL
  "pdbpp",
  "ruff",

  # testing
  "filelock",
  "hypothesis",
  "psutil",
  "pytest",
  "pytest-cov",
  "pytest-random-order",
  "pytest-timeout",
  "pytest-xdist[psutil]",
  "requests",

  # performance test
  "locust",

  # Sentry SDK
  "sentry-sdk"
]
typing = [
  "mypy",
  "sentry-sdk",
  "types-cachetools",
  "types-jsonschema",
  "types-protobuf < 4"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "src/karapace/version.py"

[tool.ruff]
line-length = 125
